AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

lib_LTLIBRARIES = libArgumentParser.la
libArgumentParser_la_SOURCES = src/Argument.cpp src/ArgumentParser.cpp src/ArgumentParserInternals.cpp src/convert.cpp
include_HEADERS = src/ArgumentParser.h
libArgumentParser_la_LDFLAGS = -version-info 0:0:0

#dist_noinst_SCRIPTS = autogen.sh

